--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
-<h1>
-  Look at me, I'm a header
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>The Home of Zone</title>
+    <style>
+        h1 {color: red; font-weight: bold;}
+        p {color: aqua}
+    </style>
+</head>
+<body>
+    <h1> <!-- Header -->
+        Look at me, I'm a header
+    </h1>
 
-<strong>
-  i am groot
-</strong>
+    <strong>
+        i am groot
+    </strong>
 
-<p>
-  Oh look <br>
-  I have a line break
-</p>
+    <p>
+        Oh look <br>
+        I have a line break
+    </p>
+
+    <!-- Image with link -->
+    <a href="https://www.tumblr.com/zoneco/708478699678400512/zoneco-todays-dd-game-got-derailed-by-a-sudden?source=share">
+        <img src="https://64.media.tumblr.com/78e9160e9e2014477579a189778a8402/ae34748f74c40fe8-58/s1280x1920/c6cab9e3b4fb9ff8f87265203b82016f975adef7.pnj"
+        title="The Shadow Wizard, by me" alt="A digital drawing of a wizard with black and white robes, tilting her head to the side and wearing a tall and pointy wizard hat"></img>
+    </a>
+
+</body>
+</html>
