--- a/index.html
+++ b/index.html
@@ -91,16 +91,9 @@
       border: 1px solid #FCC8D1;
       background-color: #FEF2F4;
       margin-top: 0;
-      height:700px;
+      height: fit-content;
     }
 
-    h3 { /* About me header */
-      margin-top:0;
-      height: 50px;
-      text-align: center;
-      background-color: #FFABAB;
-      width: 100%;
-    }
     .about { /* About me box */
       margin-left: 10px;
       margin-top: 10px;
@@ -112,6 +105,13 @@
     .about-content { /* About me text box */
       margin-left: 10px;
       margin-top:15px;
+    }
+    h3 { /* About me header */
+      margin-top:0;
+      height: 50px;
+      text-align: center;
+      background-color: #FFABAB;
+      width: 100%;
     }
 
   </style>
