--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <header>
   <div class="header-content">
     <div class="image-border"> <!-- Image of me & border around it -->
-      <img src="https://github.com/maretheu/maretheu.github.io/blob/main/Alex.jpg?raw=true" alt="Your Name">
+      <img src="https://github.com/maretheu/maretheu.github.io/blob/main/Alex.jpg?raw=true" alt="Alex Bamberger">
     </div>
     <div>
       <h1>Alex Bamberger (They/Them)</h1> <!-- Name & Pronouns -->
