--- a/Wages.html
+++ b/Wages.html
@@ -64,7 +64,7 @@
       background-color: #D14D72;
     }
     .content { /* Writing text box */
-      height: 100%;
+      text-indent: 30px;
       margin-left: 10px;
       margin-top:15px;
     }
@@ -88,7 +88,8 @@
     <h3 onclick="window.location.href='https://www.epi.org/publication/employers-steal-billions-from-workers-paychecks-each-year/#epi-toc-16'" class="link">From "Employers steal billions from workers’ paychecks each year"</h3>
     <p class="content">
       This publication details the fact that a massive number of working class people within the United states are losing a massive amount of money every year as a direct result of wage theft in one form or another. This is a crisis that not only encompasses the majority of theft within the United States but also tends to disproportionately affect the people who are most vulnerable to harm as a result of the lost wages. Wage theft can encompass a wide range of different actions on the part of an employer but some example include minimum wage violations: paying workers less than the legal minimum wage, overtime violations: failing to pay workers what they are entitled to for working overtime, off the clock violations: failing to pay workers for work done usually before or after their shifts, pay stub and illegal deductions: failing to give workers a pay stub or illegally deducting money from their income, and many other forms. Across the United States the total amount of money stolen by employers amounts to many billions of dollars and encompasses significantly more value stolen than all other forms of theft combined. This theft can have an incredible impact on those who are targeted by it, with many individuals and families being driven into poverty as a result of the stolen earnings.
-      <br>
+    </p>
+    <p class="content">
       The data used for this publication is the CPS-ORG data. This data is from a long running government survey program, monitoring a variety of different labor market conditions. This data has been used to calculate a wide range of different things such as the unemployment rate, incomes, and poverty, as well as other important pieces of data. This survey is a voluntary one with new data collected every month from a small percentage of the population. The data collected is available to the public usually within one to two months after it is gathered according to the census.gov website. Because the survey is voluntary and the data is publicly available it is largely ethical although it does only survey 59,000 households every month which is not very representative of the larger United States population. It’s important to make sure that this data is being used to support and help individuals and families within the United States but it is also important to make sure that it is in fact representative of the general population. To determine if it is being used in a largely ethical manner we should make sure that these goals are kept in mind throughout its use. We should also make sure that the scientists collecting this data continue to work to make it more accurate and representative of the larger population and try to avoid focusing too heavily on a small subset of the population so that the data is actually useful on a larger scale.
     </p>
   </section>
