Update and rename aiaccess.html to aiaccess2.html

--- a/aiaccess2.html
+++ b/aiaccess2.html
@@ -84,7 +84,7 @@
 
 <main>
   <section class="writing"> <!-- About Me -->
-    <h3>AI & Accessibility</h3>
+    <h3>AI & Accessibility 2</h3>
     <h3 onclick="window.location.href='https://medium.com/the-neuro/how-ai-is-improving-accessibility-510f6c70177c'" class="link">From "How AI Is Improving Accessibility"</h3>
     <p class="content">
       When talking about the concept of diversity and accessibility, it is vitally important to include the voices of the affected groups in the conversation from the start. Often however, people will claim to have some significant expertise in the topic and some solution to the problem they perceive without speaking to or working with the groups relevant to the conversation. Because of this, these people often end up creating policies and ideas that are either unhelpful or actively harmful to the people they claim to be trying to help.
