--- a/aiaccess2.html
+++ b/aiaccess2.html
@@ -75,11 +75,11 @@
 
 
 <h4> <!-- Navigation -->
-  <div>Home Page</div>
-  <div>My Art</div>
-  <div id="column2">Resume</div>
-  <div>Ethics Writing<br>You are here</div>
-  <div>Links</div>
+  <div onclick="window.location.href='https://maretheu.github.io/index.html'">Home Page<br>You are here</div>
+  <div onclick="window.location.href='https://maretheu.github.io/art.html'">My Art</div>
+  <div onclick="window.location.href='https://maretheu.github.io/resume.html'">Resume</div>
+  <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing</div>
+  <div onclick="window.location.href='https://maretheu.github.io/links.html'">Links</div>
 </h4>
 
 <main>
