--- a/aiaccess2.html
+++ b/aiaccess2.html
@@ -75,10 +75,10 @@
 
 
 <h4> <!-- Navigation -->
-  <div onclick="window.location.href='https://maretheu.github.io/index.html'">Home Page<br>You are here</div>
+  <div onclick="window.location.href='https://maretheu.github.io/index.html'">Home Page</div>
   <div onclick="window.location.href='https://maretheu.github.io/art.html'">My Art</div>
   <div onclick="window.location.href='https://maretheu.github.io/resume.html'">Resume</div>
-  <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing</div>
+  <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing<br>You are here</div>
   <div onclick="window.location.href='https://maretheu.github.io/links.html'">Links</div>
 </h4>
 
