--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </header>
 
 <h4> <!-- Navigation -->
-  <div onclick="window.location.href='https://maretheu.github.io/index.html'">Home Page<br>testiiiiing</div>
+  <div onclick="window.location.href='https://maretheu.github.io/index.html'">Home Page<br>You Are Here</div>
   <div onclick="window.location.href='https://maretheu.github.io/art.html'">My Art</div>
   <div onclick="window.location.href='https://maretheu.github.io/resume.html'">Resume</div>
   <div onclick="window.location.href='https://maretheu.github.io/ethics.html'">Ethics Writing</div>
