--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       border: 1px solid #FCC8D1;
       background-color: #FEF2F4;
       margin-top: 0;
-      height: fit-content;
+      height: 100vh;
     }
 
     .about { /* About me box */
