--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
     main { /* Lower half of page */
       display: flex;
+      border-top: 2px solid var(--select-color);
       justify-content: space-between;
       background-color: var(--background-color);
       margin-top: 0;
